--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@iconify-json/skill-icons": "1.2.3",
     "@iconify-json/streamline-emojis": "1.2.4",
     "@iconify-json/streamline": "1.2.5",
+    "@iconify-json/tabler": "1.2.23",
     "astro-icon": "1.1.5",
     "astro": "5.15.1",
     "taze": "19.8.1",
